--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
         <p style="font-size:0.75em;margin-bottom:2em;margin-top:0;padding-top:0;">This email is intended for BCC recipients.</p>
         <header style="box-sizing: border-box;display: block;">
             <div class="jumbotron" style="background-image: url(https://raw.githubusercontent.com/pathak-neha/email-wrq-survey/master/Untitled-3.jpg);background-size: 100%;box-sizing: border-box;padding: 2rem 1rem;margin-bottom: 2rem;background-color: #e9ecef;border-radius: .3rem;">
-                <div style="display:block;max-width:600px;"><h2 style="box-sizing: border-box;margin-top: 0;margin-bottom: .5rem;font-family: inherit;font-weight: 500;line-height: 1.2;color: inherit;font-size: 1.5rem;orphans: 3;widows: 3;page-break-after: avoid;display: flex!important;-ms-flex-pack: center!important;">Thanks for participating!</h2>
+                <div style="display:block;max-width:600px;"><h2 style="box-sizing: border-box;margin-top: 0;margin-bottom: .5rem;font-family: inherit;font-weight: 500;line-height: 1.2;color: inherit;font-size: 1.5rem;orphans: 3;widows: 3;page-break-after: avoid;display: flex!important;">Thanks for participating!</h2>
                 <p style="font-size:0.9em;">You are receiving this email because you are a candidate for a workplace survey.</p>
                 <p style="font-size:0.9em;">If you are unable to complete the Typeform survey, please respond to this email with a completed copy of the attached form.</p>
-                <p style="box-sizing: border-box;margin-top: 0;margin-bottom: 1rem;orphans: 3;widows: 3;display: flex!important;-ms-flex-pack: center!important;"><a href="https://neharpathak.typeform.com/to/IrxTY1ut" target="_blank" style="color:#830D0D;font-size:1.3em;">Start Survey [&#8599;]</a></p>
+                <p style="box-sizing: border-box;margin-top: 0;margin-bottom: 1rem;orphans: 3;widows: 3;display: flex!important;"><a href="https://neharpathak.typeform.com/to/IrxTY1ut" target="_blank" style="color:#830D0D;font-size:1.3em;">Start Survey [&#8599;]</a></p>
                 </div>
             </div>
         </header>
