--- a/index.html
+++ b/index.html
@@ -1,22 +1,28 @@
 <html lang="en" style="box-sizing: border-box;font-family: sans-serif;line-height: 1.15;-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;-ms-overflow-style: scrollbar;-webkit-tap-highlight-color: transparent;">
+
 <body style="box-sizing: border-box;margin: 0;font-family: -apple-system,BlinkMacSystemFont,&quot;Segoe UI&quot;,Roboto,&quot;Helvetica Neue&quot;,Arial,sans-serif,&quot;Apple Color Emoji&quot;,&quot;Segoe UI Emoji&quot;,&quot;Segoe UI Symbol&quot;;font-size: 1rem;font-weight: 400;line-height: 1.5;color: #212529;text-align: left;background-color: #fff;background: #fefefe;min-width: 992px!important;">
     <div id="wrapper" style="padding: 2%;box-sizing: border-box;background: #fafafa;width: 100%;max-width: 900px;margin: 0 auto;">
-        <p style="font-size:0.75em;color:#007fbf;margin-bottom:0;padding-bottom:0;">If you cannot see this email, click&nbsp;<a href="https://pathak-neha.github.io/email-wrq-survey/" target="_blank" style="box-sizing: border-box;color: #007bff;text-decoration: underline;background-color: transparent;-webkit-text-decoration-skip: objects;">here</a> to view in browser.</p>
+        <p style="font-size:0.75em;color:#007fbf;margin-top:0;margin-bottom:0;padding-top:0;padding-bottom:0;">If you cannot see this email, click&nbsp;
+            <a href="https://pathak-neha.github.io/email-wrq-survey/" target="_blank" style="box-sizing: border-box;color: #007bff;text-decoration: underline;background-color: transparent;-webkit-text-decoration-skip: objects;">here</a> to view in browser.
+        </p>
         <p style="font-size:0.75em;margin-bottom:2em;margin-top:0;padding-top:0;">This email is intended for BCC recipients.</p>
-        <header style="box-sizing: border-box;display: block;">
-            <div class="jumbotron" style="background-image: url(https://raw.githubusercontent.com/pathak-neha/email-wrq-survey/master/Untitled-3.jpg);background-size: 100%;box-sizing: border-box;padding: 2rem 1rem;margin-bottom: 2rem;background-color: #e9ecef;border-radius: .3rem;">
-                <div style="display:block;max-width:600px;"><h2 style="box-sizing: border-box;margin-top: 0;margin-bottom: .5rem;font-family: inherit;font-weight: 500;line-height: 1.2;color: inherit;font-size: 1.5rem;orphans: 3;widows: 3;page-break-after: avoid;display: flex!important;">Thanks for participating!</h2>
-                <p style="font-size:0.9em;">You are receiving this email because you are a candidate for a workplace survey.</p>
-                <p style="font-size:0.9em;">If you are unable to complete the Typeform survey, please respond to this email with a completed copy of the attached form.</p>
-                <p style="box-sizing: border-box;margin-top: 0;margin-bottom: 1rem;orphans: 3;widows: 3;display: flex!important;"><a href="https://neharpathak.typeform.com/to/IrxTY1ut" target="_blank" style="color:#830D0D;font-size:1.3em;">Start Survey [&#8599;]</a></p>
-                </div>
+        <div class="jumbotron" style="background-size: 100%;background-color: #eeeeee;border-radius: .3rem;">
+            <img src="../Untitled-4.jpg" style="margin:0px;padding:0px;width:100%;">
+            <div style="padding-top:0; padding-bottom:1em;">
+                <p style="margin:0;margin-left:1.5em;">
+                    <span style="border:#830D0D 3px solid;padding:0.25em;">
+                        <a href="https://neharpathak.typeform.com/to/IrxTY1ut" target="_blank" style="color:#830D0D;font-size:1em;font-weight: bold;text-decoration: none;">START SURVEY [&#8599;]</a>
+                    </span>
+                </p>
             </div>
-        </header>
+        </div>
 
         <section style="box-sizing: border-box;display: block;">
             <div class="main-container overflow-hidden" style="box-sizing: border-box;">
                 <p style="box-sizing: border-box;margin-top: 0rem;margin-bottom: 0rem;orphans: 3;widows: 3;display: flex!important;font-size:0.9em;">
-                    Thank you for your participation. The result of this survey will be used in analysis of the current curriculum of the Computing and Financial Management program. If you faced any problems while completing the survey, or have any questions about this process, please feel free to reach out to me.
+                    Thank you for your participation. The result of this survey will be used in analysis of the current curriculum of the Computing
+                    and Financial Management program. If you face any problems while completing the survey, or have any questions
+                    about this process, please feel free to reach out to me.
                 </p>
                 <p style="box-sizing: border-box;margin-top: 1em;margin-bottom: 0rem;orphans: 3;widows: 3;display: flex!important;font-size:0.9em;">
                     Regards,
@@ -29,10 +35,12 @@
                     Hons. Accounting and Financial Management, Co-op 2018
                 </p>
                 <p style="box-sizing: border-box;margin-top: 0rem;margin-bottom: 0rem;orphans: 3;widows: 3;display: flex!important;font-size:0.9em;">
-                    <a href="mailto:neha.rpathak@gmail.com">Email</a>&nbsp;|&nbsp;<a href="https://www.linkedin.com/in/neha-rpathak">LinkedIn</a>&nbsp;|&nbsp;+1 (647) 781-8387
+                    <a href="mailto:neha.rpathak@gmail.com">Email</a>&nbsp;|&nbsp;
+                    <a href="https://www.linkedin.com/in/neha-rpathak">LinkedIn</a>&nbsp;|&nbsp;+1 (647) 781-8387
                 </p>
             </div>
         </section>
     </div>
 </body>
+
 </html>
