--- a/index.html
+++ b/index.html
@@ -1,46 +1,52 @@
 <html lang="en" style="box-sizing: border-box;font-family: sans-serif;line-height: 1.15;-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;-ms-overflow-style: scrollbar;-webkit-tap-highlight-color: transparent;">
 
-<body style="box-sizing: border-box;margin: 0;font-family: -apple-system,BlinkMacSystemFont,&quot;Segoe UI&quot;,Roboto,&quot;Helvetica Neue&quot;,Arial,sans-serif,&quot;Apple Color Emoji&quot;,&quot;Segoe UI Emoji&quot;,&quot;Segoe UI Symbol&quot;;font-size: 1rem;font-weight: 400;line-height: 1.5;color: #212529;text-align: left;background-color: #fff;background: #fefefe;min-width: 992px!important;">
-    <div id="wrapper" style="padding: 2%;box-sizing: border-box;background: #fafafa;width: 100%;max-width: 900px;margin: 0 auto;">
-        <p style="font-size:0.75em;color:#007fbf;margin-top:0;margin-bottom:0;padding-top:0;padding-bottom:0;">If you cannot see this email, click&nbsp;
-            <a href="https://pathak-neha.github.io/email-wrq-survey/" target="_blank" style="box-sizing: border-box;color: #007bff;text-decoration: underline;background-color: transparent;-webkit-text-decoration-skip: objects;">here</a> to view in browser.
+<body style="background: #ffffff;box-sizing: border-box;margin: 0;font-family: Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;font-size: 1rem;font-weight: 400;line-height: 1.5;color: #212529;text-align: left;min-width: 992px!important;">
+    <center>
+    <table><tr><td width="600">
+    <div id="wrapper" style="background:#ffffff;padding: 2%;width: 100%;max-width: 600px;margin: 0 auto;">
+        <p style="font-size:0.75em;font-weight: 600;color:#007fbf;margin-top:0;margin-bottom:0;padding-top:0;padding-bottom:0;">
+            If you cannot see this email, click <a href="https://pathak-neha.github.io/email-wrq-survey/" target="_blank" style="color:#007fbf;text-decoration: underline;">here</a> to view in browser.
+            This email is intended for BCC recipients.
         </p>
-        <p style="font-size:0.75em;margin-bottom:2em;margin-top:0;padding-top:0;">This email is intended for BCC recipients.</p>
-        <div class="jumbotron" style="background-size: 100%;background-color: #eeeeee;border-radius: .3rem;">
-            <img src="../Untitled-4.jpg" style="margin:0px;padding:0px;width:100%;">
-            <div style="padding-top:0; padding-bottom:1em;">
-                <p style="margin:0;margin-left:1.5em;">
-                    <span style="border:#830D0D 3px solid;padding:0.25em;">
-                        <a href="https://neharpathak.typeform.com/to/IrxTY1ut" target="_blank" style="color:#830D0D;font-size:1em;font-weight: bold;text-decoration: none;">START SURVEY [&#8599;]</a>
-                    </span>
-                </p>
-            </div>
-        </div>
-
-        <section style="box-sizing: border-box;display: block;">
-            <div class="main-container overflow-hidden" style="box-sizing: border-box;">
-                <p style="box-sizing: border-box;margin-top: 0rem;margin-bottom: 0rem;orphans: 3;widows: 3;display: flex!important;font-size:0.9em;">
-                    Thank you for your participation. The result of this survey will be used in analysis of the current curriculum of the Computing
-                    and Financial Management program. If you face any problems while completing the survey, or have any questions
-                    about this process, please feel free to reach out to me.
-                </p>
-                <p style="box-sizing: border-box;margin-top: 1em;margin-bottom: 0rem;orphans: 3;widows: 3;display: flex!important;font-size:0.9em;">
-                    Regards,
-                </p>
-                <p style="box-sizing: border-box;margin: 0rem;margin-top:1em;padding: 0rem;orphans: 3;widows: 3;display: flex!important;font-size:1em;font-weight: bold;">
-                    Neha R. Pathak
-                </p>
-                <p style="box-sizing: border-box;margin-top: 0rem;margin-bottom: 0rem;orphans: 3;widows: 3;display: flex!important;font-size:0.9em;">
-                    <span style="color:#555555;font-weight:bold;">Alumnus&nbsp;</span>
-                    Hons. Accounting and Financial Management, Co-op 2018
-                </p>
-                <p style="box-sizing: border-box;margin-top: 0rem;margin-bottom: 0rem;orphans: 3;widows: 3;display: flex!important;font-size:0.9em;">
-                    <a href="mailto:neha.rpathak@gmail.com">Email</a>&nbsp;|&nbsp;
-                    <a href="https://www.linkedin.com/in/neha-rpathak">LinkedIn</a>&nbsp;|&nbsp;+1 (647) 781-8387
-                </p>
-            </div>
-        </section>
+        <table bgcolor="#f0f0f0" style="background:#f0f0f0;">
+            <tr>
+                <td><img src="https://raw.githubusercontent.com/pathak-neha/email-wrq-survey/master/Untitled-4.jpg" style="width:100%;max-width:890px;margin:0;padding:0;" /></td>
+            </tr>
+            <tr>
+                <td>
+                    <p style="margin-top:0.5em;margin-left:1.5em;margin-bottom:1.5em;">
+                        <span style="border:#830D0D 3px solid;padding:0.25em;">
+                            <a href="https://neharpathak.typeform.com/to/IrxTY1ut" target="_blank" style="color:#830D0D;font-size:1em;font-weight: bold;text-decoration: none;">START SURVEY [&#8599;]</a>
+                        </span>
+                    </p>
+                    <p  style="margin:0;margin-left:1.5em;margin-bottom:1em;font-size:1em;font-weight: 300;">
+                            You are receiving this email because you are a candidate for a University of Waterloo workplace survey. If you are unable to complete the Typeform survey,
+                            please respond to this email to receive a fillable MS Word Form (.docm).
+                    </p>
+                    <p style="margin:0;margin-left:1.5em;margin-bottom:1em;font-size:1em;font-weight: 300;">
+                            Thank you for your participation. The result of this survey will be used in analysis of the current curriculum of the Computing
+                        and Financial Management program. If you face any problems while completing the survey, or have any questions
+                        about this process, please feel free to reach out to me.
+                    </p>
+                    <p style="margin-left:1.5em;margin-bottom:0.5em;padding: 0rem;font-weight:300;">
+                        Regards,
+                    </p>
+                    <p style="margin-left:1.5em;margin-bottom:1.5em;padding: 0rem;">
+                        <span style="font-size:1em;font-weight: 600;">Neha R. Pathak</span><br>
+                        <span style="font-size:0.9em;">
+                            <span style="color:#555555;font-weight:700;">Alumnus&nbsp;</span>
+                            Hons. Accounting and Financial Management, Co-op 2018<br>
+                            <a href="mailto:neha.rpathak@gmail.com">Email</a>&nbsp;|&nbsp;
+                            <a href="https://www.linkedin.com/in/neha-rpathak">LinkedIn</a>&nbsp;|&nbsp;+1 (647) 781-8387
+                        </span>
+                    </p>
+                </td>
+            </tr>
+        </table>
     </div>
+    
+    </td></tr></table>
+    </center>
 </body>
 
 </html>
