--- a/index.html
+++ b/index.html
@@ -3,35 +3,35 @@
 <body style="background: #ffffff;box-sizing: border-box;margin: 0;font-family: Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;font-size: 1rem;font-weight: 400;line-height: 1.5;color: #212529;text-align: left;min-width: 992px!important;">
     <center>
     <table><tr><td width="600">
-    <div id="wrapper" style="background:#ffffff;padding: 2%;width: 100%;max-width: 600px;margin: 0 auto;">
-        <p style="font-size:0.75em;font-weight: 600;color:#007fbf;margin-top:0;margin-bottom:0;padding-top:0;padding-bottom:0;">
+    <div id="wrapper" style="background:#ffffff;width: 100%;max-width: 600px;margin: 0 auto;padding:0;">
+        <p style="font-size:0.75em;font-weight: 600;color:#007fbf;margin:0;padding:0;padding-left:0.25em;">
             If you cannot see this email, click <a href="https://pathak-neha.github.io/email-wrq-survey/" target="_blank" style="color:#007fbf;text-decoration: underline;">here</a> to view in browser.
             This email is intended for BCC recipients.
         </p>
         <table bgcolor="#f0f0f0" style="background:#f0f0f0;">
             <tr>
-                <td><img src="https://raw.githubusercontent.com/pathak-neha/email-wrq-survey/master/Untitled-4.jpg" style="width:100%;max-width:890px;margin:0;padding:0;" /></td>
+                <td><img src="https://raw.githubusercontent.com/pathak-neha/email-wrq-survey/master/Untitled-4.jpg" style="width:100%;margin:0;padding:0;" /></td>
             </tr>
             <tr>
                 <td>
-                    <p style="margin-top:0.5em;margin-left:1.5em;margin-bottom:1.5em;">
+                    <p style="margin-top:0.5em;margin-left:1em;margin-right:1em;margin-bottom:1.5em;">
                         <span style="border:#830D0D 3px solid;padding:0.25em;">
                             <a href="https://neharpathak.typeform.com/to/IrxTY1ut" target="_blank" style="color:#830D0D;font-size:1em;font-weight: bold;text-decoration: none;">START SURVEY [&#8599;]</a>
                         </span>
                     </p>
-                    <p  style="margin:0;margin-left:1.5em;margin-bottom:1em;font-size:1em;font-weight: 300;">
+                    <p  style="margin:0;margin-left:1em;margin-right:1em;;margin-bottom:1em;font-size:1em;font-weight: 300;">
                             You are receiving this email because you are a candidate for a University of Waterloo workplace survey. If you are unable to complete the Typeform survey,
                             please respond to this email to receive a fillable MS Word Form (.docm).
                     </p>
-                    <p style="margin:0;margin-left:1.5em;margin-bottom:1em;font-size:1em;font-weight: 300;">
+                    <p style="margin:0;margin-left:1em;margin-right:1em;margin-bottom:1em;font-size:1em;font-weight: 300;">
                             Thank you for your participation. The result of this survey will be used in analysis of the current curriculum of the Computing
                         and Financial Management program. If you face any problems while completing the survey, or have any questions
                         about this process, please feel free to reach out to me.
                     </p>
-                    <p style="margin-left:1.5em;margin-bottom:0.5em;padding: 0rem;font-weight:300;">
+                    <p style="margin-left:1em;margin-bottom:0.5em;padding: 0rem;font-weight:300;">
                         Regards,
                     </p>
-                    <p style="margin-left:1.5em;margin-bottom:1.5em;padding: 0rem;">
+                    <p style="margin-left:1em;margin-right:1em;margin-bottom:1.5em;padding: 0rem;">
                         <span style="font-size:1em;font-weight: 600;">Neha R. Pathak</span><br>
                         <span style="font-size:0.9em;">
                             <span style="color:#555555;font-weight:700;">Alumnus&nbsp;</span>
