--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <td>
                     <p style="margin-top:0.5em;margin-left:1em;margin-right:1em;margin-bottom:1.5em;">
                         <span style="border:#830D0D 3px solid;padding:0.25em;">
-                            <a href="https://neharpathak.typeform.com/to/IrxTY1ut" target="_blank" style="color:#830D0D;font-size:1em;font-weight: bold;text-decoration: none;">START SURVEY [&#8599;]</a>
+                            <a href="https://neharpathak.typeform.com/to/IrxTY1ut" target="_blank" style="color:#830D0D;font-size:1em;font-weight: bold;text-decoration: none;">START SURVEY</a>
                         </span>
                     </p>
                     <p  style="margin:0;margin-left:1em;margin-right:1em;;margin-bottom:1em;font-size:1em;font-weight: 300;">
